# Assigment-Test

./: CMakeLists.txt  README.md  Test.txt
src/: CMakeLists.txt  main.cpp
src/Application/: Application.cpp  Application.h  CMakeLists.txt
src/CRC/: CMakeLists.txt  CRC.cpp  CRC.h
src/Commands/: CMakeLists.txt  Commands.cpp  Commands.h
src/OptionsParser/: BoolOption.cpp  BoolOption.h  CMakeLists.txt  OptionBase.cpp  OptionBase.h  OptionParser.cpp  OptionParser.h  StringOption.cpp  StringOption.h
